Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- smart EQ:
  The Wi-Fi mode "APClient" will be changed to "Client" after 45 minutes, and the Wi-Fi will be restarted. "APClient" will be restored upon reboot.
  switch off time based Climate/Heater when crash counter > 1 for stop spamming Climate information
  new config:
    [xsq] ap2client           -- Wifi Mode APClient to client timeout in minutes (default 45 minutes)
    [xsq] wifi.mode           -- keep existing behaviour if desired ([auto] wifi.mode)
- Vehicle framework: signal generator operation state changes
  New events:
    vehicle.gen.start         -- Power delivery started
    vehicle.gen.stop          -- Power delivery stopped
    vehicle.gen.pilot.on      -- Pilot signal present
    vehicle.gen.pilot.off     -- Pilot signal gone
    vehicle.gen.timermode.on  -- Generator timer has been enabled
    vehicle.gen.timermode.off -- Generator timer has been disabled
- Cellular: GPS auto pause on parking re-activate option added (update position).
  New config:
    [modem] gps.reactivate    -- park time in minutes for auto re-activate for (default 5 minutes) GPS lock (gps.reactlock), 0 = disabled (default)
    [modem] gps.reactlock     -- by default, GPS lock for 5 minutes until automatic shutdown during parking time

2024-03-23 MB   3.3.005  OTA release
- Cellular: GPS auto pause on parking option added (power saving).
  New config:
    [modem] gps.parkpause     -- park time in seconds for auto pause, 0 = disabled (default)
- New vehicle: NIU MQi GT EVO or GT 100 electric scooters (NEVO)
  https://docs.openvehicles.com/en/latest/components/vehicle_niu_gtevo/docs/index.html
- Smart EQ 453:
    TPMS pressure alert settings at Features
    add information commads xsq climate|counter|mtdata|reset|start|total
- Nissan Leaf:
    ZE1 inital release
    Fix: Poll state not set to off when charging stopped by OVMS