@@ -5,7 +5,8 @@ Open Vehicle Monitor System v3 - Change log
   The Wi-Fi mode "APClient" will be changed to "Client" after 45 minutes, and the Wi-Fi will be restarted. "APClient" will be restored upon reboot.
   switch off time based Climate/Heater when crash counter > 1 for stop spamming Climate information
   new config:
-    [xsq] ap2client           -- Wifi Mode APClient to client timeout in minutes (default 45 minutes)
+    [xsq] ap2client.timeout   -- Wifi Mode APClient to client timeout in minutes (default 45 minutes), settings at Features
+    [xsq] ap2client.on        -- Wifi Mode APClient to client enable/disable (default enable), settings at Features
     [xsq] wifi.mode           -- keep existing behaviour if desired ([auto] wifi.mode)
 - Vehicle framework: signal generator operation state changes
   New events:
